# SignalEasel

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .timetracker  CMakeLists.txt  CNAME  LICENSE  README.md  README_8md.html  afsk_8hpp.html  afsk_8hpp.js  afsk_8hpp__dep__incl.map  afsk_8hpp__dep__incl.md5  afsk_8hpp__incl.map  afsk_8hpp__incl.md5  afsk_8hpp_source.html  afsk__demodulator_8cpp.html  afsk__demodulator_8cpp__incl.map  afsk__demodulator_8cpp__incl.md5  afsk__modulator_8cpp.html  afsk__modulator_8cpp.js  afsk__modulator_8cpp__incl.map  afsk__modulator_8cpp__incl.md5  afsk__receiver_8cpp.html  afsk__receiver_8cpp__incl.map  afsk__receiver_8cpp__incl.md5  afsk__test_8cpp.html  afsk__test_8cpp.js  afsk__test_8cpp__incl.map  afsk__test_8cpp__incl.md5  afsk__test_8cpp_a03a8e24713026a913586114ac55b5a6c_cgraph.map  afsk__test_8cpp_a03a8e24713026a913586114ac55b5a6c_cgraph.md5  afsk__test_8cpp_a894b615862c352aa932a7ff5fb85c6dd_cgraph.map  afsk__test_8cpp_a894b615862c352aa932a7ff5fb85c6dd_cgraph.md5  afsk__test_8cpp_aa3eb37900f1f23219d5f5475181310af_cgraph.map  afsk__test_8cpp_aa3eb37900f1f23219d5f5475181310af_cgraph.md5  annotated.html  annotated_dup.js  api_8puml.html  (+1505 more)
.github/workflows/: doxygen.yaml  signal_easel_ci_cd.yaml  tests.yaml
doc/: flow  minimodem raw binary decode.md
doc/experimental/: out.txt
docs/: doxygen_layout.xml  psk_notes.md  sstv.md  user_manual.md
docs/afsk_filters_snr/: in3.csv
docs/legacy/: api.puml  aprs_modulation.puml  data_modulator.puml
docs/legacy/examples/: CMakeLists.txt  aprs-example.cpp  commandline-demo.cpp
docs/legacy/experimental/: afsk_baseband.ipynb
examples/: CMakeLists.txt  aprs-example.cpp  ax25-example.cpp  psk-example.cpp  sstv-commandline.cpp  sstv-example.cpp
experimental/: afsk_baseband.ipynb
include/: data_modes.hpp  data_modulation.hpp  mwav.h  mwav_diagnostics.hpp
include/SignalEasel/: afsk.hpp  aprs.hpp  aprs_telemetry.hpp  ax25.hpp  bit_stream.hpp  constants.hpp  demodulator.hpp  exception.hpp  modulator.hpp  psk.hpp  pulse_audio.hpp  receiver.hpp  settings.hpp  signal_easel.hpp  sstv.hpp
include/SignalEasel/aprs/: packets.hpp  telemetry_data.hpp  telemetry_parameter.hpp  telemetry_transcoder.hpp
lib/: wavgen.cpp  wavgen.h
project/: Dockerfile  build_docker_image.sh  clang-tidy.sh  clang_tidy.sh  coverage.sh  doxygen_coverage.sh  gcovr.cfg  signal_easel_logo.drawio  test_coverage.sh
project/doc/afsk_filters_snr/: bandpass.ipynb  baseband.ipynb  in1.csv  in2.csv
project/doc/examples/: sstv-example.cpp
project/doc/experimental/: afsk_baseband.ipynb
project/doc/legacy/: minimodem raw binary decode.md
project/doc/legacy/examples/: psk-example.cpp
project/doxygen/: Doxyfile  Doxyfile_coverage
project/doxygen/theme/: header.html
project/legacy/: aprs_modes.hpp  mwav.cpp
project/legacy/demodulators/: afsk.cpp  demodulators.hpp
project/legacy/modulators/: afsk.cpp  aprs.cpp  ax25.cpp  modulators.hpp  psk.cpp  sstv.cpp
project/legacy/utilities/: ax25.h  bit_stream.cpp  varicode.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  defines_0.js  defines_1.js  defines_2.js  (+93 more)
src/: afsk.hpp  afsk_demodulator.cpp  afsk_modulator.cpp  aprs-testing.cpp  aprs.cpp  ax25.cpp  ax25.hpp  band_pass_filter.cpp  band_pass_filter.hpp  bit_stream.cpp  bp_filter.cpp  bp_filter.hpp  commandline.cpp  data_modulation.cpp  demodulator.cpp  main.cpp  modulator.cpp  morse_modulator.cpp  mwav.cpp  mwav.h  mwav.hpp  mwav_constants.hpp  mwav_data_modes.cpp  pulse_audio.hpp  pulse_audio_reader.cpp  pulse_audio_writer.cpp  utilities.cpp  utilities.hpp
src/afsk/: afsk_demodulator.cpp  afsk_modulator.cpp  afsk_receiver.cpp
src/aprs/: aprs_demodulator.cpp  aprs_encoders.cpp  aprs_modulator.cpp  aprs_receiver.cpp  telemetry_data.cpp  telemetry_encoder.cpp  telemetry_parameter.cpp  telemetry_transcoder.cpp
src/ax25/: ax25_address.cpp  ax25_decode.cpp  ax25_fcs.cpp  ax25_frame.cpp
src/demodulators/: afsk.cpp  audio-in.cpp  psk.cpp
src/include/: aprs_modes.hpp  mwav_configuration.hpp  sstv_modes.hpp
src/modulators/: afsk.cpp  afsk.h  aprs.cpp  modulators.h  modulators.hpp  morse.cpp  psk.cpp  psk.h  sstv.cpp
src/psk/: convolutional_code.cpp  convolutional_code.hpp  psk_modulator.cpp  psk_wave_shaper.hpp  varicode.cpp
src/sstv/: robot_sstv.cpp  sstv_modulator.cpp
src/utilities/: aprs.cpp  aprs.h  ax25.cpp  ax25.h  bit-stream.cpp  bit-stream.h  convolutional-code.h  mwav-exception.h  wavgen.cpp  wavgen.h
tests/: CMakeLists.txt  afsk_ascii_test.cpp  afsk_test.cpp  aprs-test.cpp  aprs_receiver_test.cpp  aprs_telemetry_data_test.cpp  aprs_telemetry_encoder_test.cpp  aprs_telemetry_encoders_test.cpp  aprs_telemetry_parameter_test.cpp  aprs_telemetry_test.cpp  aprs_telemetry_transcoder_test.cpp  aprs_test.cpp  ax25-test.cpp  ax25_address_test.cpp  ax25_crc_test.cpp  ax25_frame_test.cpp  data_modulation_test.cpp  psk_test.cpp  pulse_test.cpp  sstv_test.cpp  telemetry_parameter_test.cpp  utilities_test.cpp
